Remove .sceondaty-color from index template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@ vegetarian, veg, food for events, best in Sheffield">
 <!-- This sets the site up to be responsive, known as a responsive design meta tag. Don't use it if your site isn't responsive! -->
 <!-- width makes the page match the screen's width, and initial scale sets the CSS pixels and the device pixels to a 1:1 ratio -->
 
-<link rel="canonical" href="#">
+<link rel="canonical" href="https://ecomm-gw.herokuapp.com">
 <!-- This tells search engines to use this URL as the main page, and that it shouldn't index other pages -->
 <!-- So if you have a site with multiple URLs, they're treated as seperate sites. This messes with the SEO, so putting this in
     with the correct link gives you better results, and more accuracy with data tracking -->
@@ -63,9 +63,9 @@ vegetarian, veg, food for events, best in Sheffield">
 <section class="container">
     <div class="row">
         <div class="col-6" id="hero-txt">
-            <h1 class="py-3">Banging <span class="secondary-color">BRATWURSTS.</span></h1>
-            <h1 class="py-3">Proper <span class="secondary-color">CHICKEN.</span></h1>
-            <h1 class="py-3">And now.......<br><span class="secondary-color">BURGERS.</span></h1>
+            <h1 class="py-3">Banging <span class="text-uppercase">BRATWURSTS.</span></h1>
+            <h1 class="py-3">Proper <span class="text-uppercase">CHICKEN.</span></h1>
+            <h1 class="py-3">And now.......<br><span class="text-uppercase">BURGERS.</span></h1>
             <div class="my-3">
                 <h4>
                     <a class="btn btn-lg btn-cta" href="{% url 'products' %}" role="button">View Menu</a>
