--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -16,7 +16,7 @@
 <!-- This sets the site up to be responsive, known as a responsive design meta tag. Don't use it if your site isn't responsive! -->
 <!-- width makes the page match the screen's width, and initial scale sets the CSS pixels and the device pixels to a 1:1 ratio -->
 
-<link rel="canonical" href="#">
+<link rel="canonical" href="https://ecomm-gw.herokuapp.com/menu/add">
 <!-- This tells search engines to use this URL as the main page, and that it shouldn't index other pages -->
 <!-- So if you have a site with multiple URLs, they're treated as seperate sites. This messes with the SEO, so putting this in
     with the correct link gives you better results, and more accuracy with data tracking -->
