--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,6 +1,7 @@
  <nav class="navbar navbar-expand-lg w-100 px-2">
          <a class="navbar-brand" href="{% url 'home' %}">
-             <img id="nav-logo" width="200" height="100" src="{{ MEDIA_URL }}logo.png"
+             <!-- <img id="nav-logo" width="200" height="100" src="{{ MEDIA_URL }}logo.png" -->
+             <img id="nav-logo" src="{{ MEDIA_URL }}logo.png"
                  alt="Black outline of a Bratwurst with Get Wurst written on top to look like the text was done using a squirty bottle of sauce">
          </a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavContent"
