--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -28,9 +28,10 @@ vegetarian, veg, food for events, best in Sheffield">
                 <a class="btn btn-lg btn-cta" href="{% url 'products' %}" role="button">View Menu</a>
             </div>
         </div>
-        <!-- <div class="col-6 overflow-hidden">
-            <img src="{{ MEDIA_URL }}hero-burger.png" class="hero-img" alt="A delicous looking double cheese burger">
-        </div>    -->
+        <div class="col-6 overflow-hidden">
+            <!-- <img src="{{ MEDIA_URL }}hero-burger.png" class="hero-img" alt="A delicous looking double cheese burger"> -->
+            <img src="static/images/hero-img.webp" class="hero-img" alt="A delicous looking double cheese burger">
+        </div>   
     </div> 
 </section>
 
