--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -29,8 +29,7 @@ vegetarian, veg, food for events, best in Sheffield">
             </div>
         </div>
         <div class="col-6 overflow-hidden">
-            <!-- <img src="{{ MEDIA_URL }}hero-burger.png" class="hero-img" alt="A delicous looking double cheese burger"> -->
-            <img src="static/images/hero-img.webp" class="hero-img" alt="A delicous looking double cheese burger">
+            <img src="{{ STATIC_URL }}hero-burger.png" class="hero-img" alt="A delicous looking double cheese burger">
         </div>   
     </div> 
 </section>
