Change logo src

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,7 +1,8 @@
  <nav class="navbar navbar-expand-lg w-100 px-2">
          <a class="navbar-brand" href="{% url 'home' %}">
              <!-- <img id="nav-logo" src="{{ MEDIA_URL }}logo.png" -->
-             <img id="nav-logo" src="{{ STATIC_URL }}images/logo.webp"
+             href="{{ MEDIA_URL }}apple-touch-icon.png">
+             <img id="nav-logo" src="{{ MEDIA_URL }}logo.webp"
                  alt="Black outline of a Bratwurst with Get Wurst written on top to look like the text was done using a squirty bottle of sauce">
          </a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavContent"
