--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -29,7 +29,7 @@ vegetarian, veg, food for events, best in Sheffield">
             </div>
         </div>
         <div class="col-6 overflow-hidden">
-            <img src="{{ MEDIA_URL }}hero-burger.webp" class="hero-img" alt="A delicous looking double cheese burger">
+            <img src="{{ MEDIA_URL }}hero-img.webp" class="hero-img" alt="A delicous looking double cheese burger">
         </div>   
     </div> 
 </section>
