Correct events img src

--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -45,7 +45,7 @@ opera">
                         <div class="image-container">
                             <a href="{{ event.link }}" target="_blank" rel="noopener"
                                 aria-label="Visit {{ event.name }}'s page (opens in a new tab)">
-                                <img class="card-img" src="{{ MEDIA_URL}}{{ event.image.url }}"
+                                <img class="card-img" src="{{ MEDIA_URL }}{{ event.image }}"
                                     alt="{{ event.name }} on {{ event.date|date:'M o' }}">
                                 <h2 class="card-title">{{ event.name }}</h2>
                             </a>
