Correct heading sequence in index template

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,7 +25,7 @@ vegetarian, veg, food for events, best in Sheffield">
             <h1 class="py-3">Proper <span class="text-uppercase">CHICKEN.</span></h1>
             <h1 class="py-3">And now.......<br><span class="text-uppercase">BURGERS.</span></h1>
             <div class="my-3">
-                <a class="btn btn-lg btn-cta" href="{% url 'products' %}" role="button">View Menu</a>
+                <h2><a class="btn btn-lg btn-cta" href="{% url 'products' %}" role="button">View Menu</a></h2>
             </div>
         </div>
         <div class="col-6 overflow-hidden">
