--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -5,7 +5,8 @@
 <meta name="description" content="DESCRIPTION">
 <meta name="keywords" content="KEYWORDS">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://ecomm-gw.herokuapp.com/menu">
+<!-- DO CANONICAL LINKS -->
+<!-- <link rel="canonical" href="https://www.ecomm-gw.herokuapp.com/menu"> -->
 <meta name="robots" content="index, follow">
 
 {% endblock %}
