Remove padding from .qty_input max-width: 767px

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -34,7 +34,7 @@ vegetarian, veg, food for events, best in Sheffield">
     </div> 
 </section>
 
-<section class="container">
+<section class="container thick-border sm-no-border">
     <h2 class="text-center">Our Story</h2>
     <p>Get Wurst is run by Paul and Lindsay Melbourne, who spent many a trip to Berlin eating bratwurst on the streets
         in the early hours. Get Wurst was then born in 2015 out of a frustration of not being able to get a proper
