--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -51,7 +51,7 @@
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="thin-border form-control form-control-sm qty_input" type="number"
+                                        <input class="thin-border form-control qty_input" type="number"
                                             name="quantity" value="{{ item.quantity }}" min="1" max="9"
                                             data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
                                         <div class="input-group-append">
