Add margin-top to #detail-add-btn max-width: 376px

--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -51,7 +51,7 @@
                                     <i class="fas fa-chevron-left"></i>
                                     Back to Menu
                             </a>
-                            <input type="submit" class="btn btn-cta" value="Add to Cart">
+                            <input type="submit" class="btn btn-cta" id="detail-add-btn" value="Add to Cart">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
