Update our story text on home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -36,10 +36,9 @@ vegetarian, veg, food for events, best in Sheffield">
 
 <section class="container thick-border sm-no-border">
     <h2 class="text-center">Our Story</h2>
-    <p>Get Wurst is run by Paul and Lindsay Melbourne, who spent many a trip to Berlin eating bratwurst on the streets
-        in the early hours. Get Wurst was then born in 2015 out of a frustration of not being able to get a proper
-        bratwurst in the UK. Well, now you can, dishing up the good stuff at events and festivals across the North, and
-        at our new home in Sheffield city centre at the top of Fargate, where you can enjoy some serious German street
-        food 7 days a week from lunch till late.</p>
+    <p>Get Wurst serves delicious, fresh and authentic Berlin sourced Bratwursts, Chicken and Burgers! Based at the
+        top of Fargate, Sheffield all our products are multi-award winning and cooked to order. Use this site to view our menu and order food
+        for collection. We can also be booked for private and public events.
+    </p>
 </section>
 {% endblock %}
