--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -71,12 +71,11 @@
 {% block content %}
 
 <div class="container mb-3">
-    <h1>FAQ!</h1>
     <h1>We hear you may have a question for Get Wurst?</h1>
     {% if user.is_authenticated %}
     <a href="#ask-question" class="btn btn-primary my-3">Ask Question</a>
     {% else %}
-    PLEASE LOG IN TO INTERACT 
+    <p>Please login to submit questions and answers or to like answers.</p>
     {% endif %}
     <p>Your question may already have an answer! Check below.</p>
 
