Update faq meta data

--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -3,7 +3,7 @@
 
 {% block extra_meta %}
     <meta name="description" content="Frequently Asked Questions customers have submitted.
-    Logged in users can ask a question, post an answer and like current answers.">
+    Ask a question, post an answer and like current answers.">
     <meta name="keywords" content="FAQ, F.A.Q., F.A.Qs Frequently Asked Questions, What is a Bratwurst">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="canonical" href="https://ecomm-gw.herokuapp.com/faq">
