--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -2,13 +2,14 @@
 {% load static %}
 {% load cart_tools %}
 {% block extra_meta %}
-<meta name="description" content="DESCRIPTION">
-<meta name="keywords" content="KEYWORDS">
+<meta name="description" content="Check out our authentic Bratwursts, award winning Chicken
+and homemade Burgers. ">
+<meta name="keywords" content="Menu, Bratwurst, Chicken Wings, Chicken Pieces, Tommy, Say Cheese,
+Special Brat, Double Pig, Bacon, Satay Wings, Honey Wings, Hot Wings, Fried, Bacon Cheese,
+Double Cheese, Super Special, Hamburger">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- DO CANONICAL LINKS -->
-<!-- <link rel="canonical" href="https://www.ecomm-gw.herokuapp.com/menu"> -->
+<link rel="canonical" href="https://www.ecomm-gw.herokuapp.com/menu">
 <meta name="robots" content="index, follow">
-
 {% endblock %}
 {% block extra_title %}Menu{% endblock %}
 
