--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -1,4 +1,14 @@
 {% extends 'base.html' %}
+{% block extra_meta %}
+<meta name="description" content="Get information about our menu. Add a product to your cart ">
+<meta name="keywords" content="Add to Cart, Bratwurst, Chicken Wings, Chicken Pieces, Tommy, Say Cheese,
+Special Brat, Double Pig, Bacon, Satay Wings, Honey Wings, Hot Wings, Fried, Bacon Cheese,
+Double Cheese, Super Special, Hamburger">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="canonical" href="https://www.ecomm-gw.herokuapp.com/menu">
+<meta name="robots" content="index, follow">
+{% endblock %}
+
 {% load static %}
 
 {% block extra_title %}{{ product.name }}{% endblock %}
