Update profiles meta

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block extra_meta %}
-<meta name="description" content="DESCRIPTION">
-<meta name="keywords" content="KEYWORDS">
+<meta name="description" content="View your details and pass orders from Get Wurst.">
+<meta name="keywords" content="Get Wurst Login, Signup, Past Orders, Order History">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="#">
-<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://ecomm-gw.herokuapp.com/profile">
+<meta name="robots" content="noindex, nofollow">
 
 {% endblock %}
 
