--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -2,12 +2,70 @@
 {% load static %}
 
 {% block extra_meta %}
-    <meta name="description" content="Frequently Asked Questions customers have submitted.
-    Ask a question, post an answer and like current answers.">
-    <meta name="keywords" content="FAQ, F.A.Q., F.A.Qs Frequently Asked Questions, What is a Bratwurst">
+    <meta name="description" content="DESCRIPTION">
+    <!-- Each page should have a unique description. Page, not site. -->
+    <!-- Length can be up to 160 characters on desktop, 130 characters on mobile -->
+    <!-- You can have up to 158 description tags (although generally you won't need more than one per page) -->
+    <!-- Add a clear call to action, don't duplicate descriptions, include keywords, discounts, or offers if you're selling something -->
+
+    <meta name="keywords" content="KEYWORDS">
+    <!-- These are the keywords that your site can be searched with on Google -->
+    <!-- Make these single words, relevant to your site, often searched -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="https://ecomm-gw.herokuapp.com/faq">
+    <!-- This sets the site up to be responsive, known as a responsive design meta tag. Don't use it if your site isn't responsive! -->
+    <!-- width makes the page match the screen's width, and initial scale sets the CSS pixels and the device pixels to a 1:1 ratio -->
+
+    <link rel="canonical" href="#">
+    <!-- This tells search engines to use this URL as the main page, and that it shouldn't index other pages -->
+    <!-- So if you have a site with multiple URLs, they're treated as seperate sites. This messes with the SEO, so putting this in
+    with the correct link gives you better results, and more accuracy with data tracking -->
+
     <meta name="robots" content="index, follow">
+    <!-- This tells search engines to index and follow this webpage. This is good for site crawlers like Google and Bing -->
+    <!-- noindex, nofollow is the opposite -->
+    <!-- Set it to noindex, nofollow for 'thin' pages (pages that don't have much information), where you don't want Google or
+    Bing to judge your site based on that content -->
+
+    <!-- <title>SITE TITLE</title> -->
+    <!-- This is what will display in the tab at the top of a user's browser window -->
+    <!-- Title should be less than 60 characters -->
+    <!-- Unique title on every page, don't repeat yourself -->
+    <!-- Use words to indicate site function, use keywords with 4+ words, this should be your main keyword -->
+    <!-- Title can be changed to get the user's attention! 'Please come back, we miss you!', 'You have a new notification!' -->
+
+    <!-- Social media integration, for when people share your content -->
+    <!-- Facebook, LinkedIn, Google -->
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="TITLE OF YOUR POST OR PAGE"> <!-- Same as what's inside <title> tag -->
+    <!-- The title you want displayed when your page is linked to -->
+    <meta property="og:description" content="DESCRIPTION OF PAGE CONTENT">
+    <!-- Same as what's inside description meta tag -->
+    <!-- The description you want displayed when your page is linked to (maximum 300 characters) -->
+    <meta name="image" property="og:image" content="URL TO IMAGE">
+    <!-- URL of image to be displayed when your site is linked to -->
+    <!-- Be careful when building non-static sites like your MS3 and MS4, this can be a little tricky -->
+    <meta property="og:image:alt" content="ALT TEXT FOR IMAGE">
+    <!-- Alt text for above image - an accessibility win -->
+    <meta property="og:url" content="#"> <!-- Your page's URL -->
+    <meta property="og:site_name" content="SITE NAME"> <!-- Same as what's inside <title> tag -->
+    <meta name="author" content="AUTHOR NAME HERE"> <!-- Your name -->
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary"> <!-- Tells Twitter to expect information for a card -->
+    <meta name="twitter:title" content="TITLE OF POST OR PAGE"> <!-- Same as what's inside <title> tag -->
+    <!-- The title you want displayed when your page is linked to -->
+    <meta name="twitter:description" content="DESCRIPTION OF PAGE CONTENT">
+    <!-- Same as what's inside description meta tag -->
+    <!-- The description you want displayed when your page is linked to -->
+    <meta name="twitter:image" content="URL TO IMAGE">
+    <!-- This image must be less than 5MB, and either JPG, PNG, WEBP, or GIF -->
+    <!-- URL of image to be displayed when your site is linked to -->
+    <!-- Be careful when building non-static sites like your MS3 and MS4, this can be a little tricky -->
+    <meta name="twitter:image:alt" content="ALT TEXT FOR IMAGE">
+    <!-- Alt text for above image - an accessibility win -->
+    <meta name="twitter:site" content="@USERNAME"> <!-- The site's Twitter handle -->
+    <meta name="twitter:creator" content="@USERNAME"> <!-- Your personal Twitter handle -->
 {% endblock %}
 {% block extra_title %}FAQ{% endblock %}
 {% block content %}
@@ -91,83 +149,6 @@
         {% endfor %}
     </div>
 </div>
-//////////////////////////////////////////////////
-<!-- <div class="container mb-3">
-     <button class="btn btn-primary thick-border border-bottom-0 ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom"
-        type="button" data-bs-toggle="collapse"
-        data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="accordion-item">Expand All
-    </button>
-    <p class="accordion-expand-holder">
-        <a class="accordion-expand-all" href="#">Expand all</a>
-    </p>
-
-    <div class="accordion thick-border ui-accordion ui-widget ui-helper-reset" id="faqAccordion">
-        {% for question in questions %}
-        <div class="accordion-item">
-            <h2 class="accordion-header ui-accordion-header ui-helper-reset ui-state-default ui-corner-all"
-                id="heading{{question.id}}">
-                <button class="accordion-button" type="button" 
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapse{{question.id}}" aria-expanded="true" 
-                    aria-controls="collapse{{question.id}}">
-                    {{ question.body }}
-                </button>
-            </h2>
-            <div id="collapse{{question.id}}" class="accordion-collapse collapse multi-collapse" 
-                aria-labelledby="heading{{question.id}}"
-                data-bs-parent="#faqAccordion">
-                <div class="accordion-body border-0">
-                    {% if not question.question_answer.all %}
-                        <p>This question hasn't had an approved answer yet.
-                            {% if user.is_authenticated %}
-                            Submit an answer below.
-                            {% else %}
-                            {% endif %}
-                            <a href="{% url 'account_login' %}">Login</a>
-                            or <a href="{% url 'account_signup' %}">Signup</a> to submit an answer!
-                        </p>
-                    {% endif %}
-                    {% for answer in question.question_answer.all %}
-                        {% if answer.status == 1 %}
-                        <p>{{ answer.body | safe }}</p>
-                            {% if user.is_authenticated %}
-                                <form action="{% url 'like' answer.pk %}" method="POST" class="d-inline">
-                                    {% csrf_token %}
-                                    {% if answer in request.user.like_answer.all %}
-                                        <button type="submit" name="answer_id" class="border-0"
-                                            value="{{ answer.id }}"><i class="fa-solid fa-thumbs-up"></i>
-                                        </button>
-                                     {% else %}
-                                        <button type="submit" name="answer_id" class="border-0"
-                                            value="{{ answer.id }}"><i class="fa-regular fa-thumbs-up"></i>
-                                        </button>
-                                     {% endif %}
-                                </form>
-                                <span class="d-inline-block mb-3" >Liked by {{ answer.like.all.count }}
-                                user{{ answer.like.all.count|pluralize }}</span>     
-                                {% if forloop.last %}
-                                    <h3>Feel free to submit another answer below!</h3>
-                                {% endif %}
-                            {% endif %} 
-                         {% if not forloop.last %}
-                         <hr>
-                         {% endif %}
-                        {% endif %}
-                    {% endfor %}
-                    {% if user.is_authenticated %}
-                    <form action="{% url 'answer' question.id %}" method="post">
-                        {% csrf_token %}
-                        {{ answer_form | crispy }}
-                        <input type="submit" class="btn btn-primary" value="Submit Answer">
-                    </form>
-                    {% endif %}
-                </div>  
-            </div>
-        </div>
-        {% endfor %}
-    </div>
-</div>
-</div> -->
 
 {% if user.is_authenticated %}
 <div class="container">
@@ -180,100 +161,10 @@
 {% endif %}
 
 
-<!-- <p class="accordion-expand-holder">
-    <a class="accordion-expand-all" href="#">Expand all</a>
-</p>
-<div id="accordion" class="ui-accordion ui-widget ui-helper-reset">
-
-    <h3 class="accordion-header ui-accordion-header ui-helper-reset ui-state-default ui-accordion-icons ui-corner-all">
-        <span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
-        Section 1
-    </h3>
-    <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom">
-        <p>
-            Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-            ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-            amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-            odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-        </p>
-    </div>
-    <h3 class="accordion-header ui-accordion-header ui-helper-reset ui-state-default ui-accordion-icons ui-corner-all">
-        <span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
-        Section 2
-    </h3>
-    <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom">
-        <p>
-            Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-            ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-            amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-            odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-        </p>
-    </div>
-    <h3 class="accordion-header ui-accordion-header ui-helper-reset ui-state-default ui-accordion-icons ui-corner-all">
-        <span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
-        Section 3
-    </h3>
-    <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom">
-        <p>
-            Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-            ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-            amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-            odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-        </p>
-    </div>
-</div> -->
-
-////////////////////////////////////////////
-
-<p class="accordion-expand-holder">
-    <a class="accordion-expand-all" href="#">Expand all</a>
-</p>
-<!-- <div id="accordion thick-border" class="ui-accordion ui-widget ui-helper-reset"> -->
-<div id="accordion" class="ui-accordion ui-widget ui-helper-reset thick-border">
-
-
-    <h3 class="accordion-header ui-accordion-header ui-helper-reset ui-state-default accordion-button">
-        Section 1
-    </h3>
-    <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom">
-        <p>
-            Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-            ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-            amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-            odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-        </p>
-    </div>
-    <h3 class="accordion-header ui-accordion-header ui-helper-reset ui-state-default ui-accordion-icons ui-corner-all">
-        <span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
-        Section 2
-    </h3>
-    <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom">
-        <p>
-            Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-            ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-            amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-            odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-        </p>
-    </div>
-    <h3 class="accordion-header ui-accordion-header ui-helper-reset ui-state-default ui-accordion-icons ui-corner-all">
-        <span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
-        Section 3
-    </h3>
-    <div class="ui-accordion-content ui-helper-reset ui-widget-content ui-corner-bottom">
-        <p>
-            Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-            ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-            amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-            odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-        </p>
-    </div>
-</div>
 {% endblock %}
 
-
-
 {% block postloadjs %}
-    <!-- <script>
+    <script>
         function toggleFaq() {
             var text = document.getElementById("faqToggle");
             if (text.innerHTML === "Collapse All") {
@@ -282,54 +173,5 @@
                 text.innerHTML = "Collapse All";
             }
         }
-    </script> -->
-<script>
-    var headers = $('#accordion .accordion-header');
-    var contentAreas = $('#accordion .ui-accordion-content ').hide();
-    var expandLink = $('.accordion-expand-all');
-
-    // add the accordion functionality
-    headers.click(function() {
-    var panel = $(this).next();
-    var isOpen = panel.is(':visible');
-
-    // open or close as necessary
-    panel[isOpen? 'slideUp': 'slideDown']()
-    // trigger the correct custom event
-    .trigger(isOpen? 'hide': 'show');
-
-    // stop the link from causing a pagescroll
-    return false;
-    });
-
-    // hook up the expand/collapse all
-    expandLink.click(function(){
-    var isAllOpen = $(this).data('isAllOpen');
-
-    contentAreas[isAllOpen? 'hide': 'show']()
-    .trigger(isAllOpen? 'hide': 'show');
-    });
-
-    // when panels open or close, check to see if they're all open
-    contentAreas.on({
-    // whenever we open a panel, check to see if they're all open
-    // if all open, swap the button to collapser
-    show: function(){
-    var isAllOpen = !contentAreas.is(':hidden');
-    if(isAllOpen){
-    expandLink.text('Collapse All')
-    .data('isAllOpen', true);
-    }
-    },
-    // whenever we close a panel, check to see if they're all open
-    // if not all open, swap the button to expander
-    hide: function(){
-    var isAllOpen = !contentAreas.is(':hidden');
-    if(!isAllOpen){
-    expandLink.text('Expand all')
-    .data('isAllOpen', false);
-    }
-    }
-    });
-</script>
+    </script>
 {% endblock %}
